tests/cases/functions/errors/function-branch-missing-return.ari
fn choose(flag: bool) -> i64 {
  if flag {
    return 1;
  }
}

fn main() -> i64 {
  return choose(false);
}
